--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     ]
   },
   "dependencies": {
+    "@styled-icons/material-outlined": "^10.47.0",
     "next": "12.0.7",
     "next-pwa": "^5.4.4",
     "react": "17.0.2",
